--- a/djangohw/django/QAlist/templates/all_questions.html
+++ b/djangohw/django/QAlist/templates/all_questions.html
@@ -3,13 +3,15 @@
 {% block new %}
 	<br>
 	<a href="/new/" role="button">New question</a>
+        <br>
 {% endblock %}
 
 {% block qadetail %}
     {% for post in posts %}
         <div class="post">
             <h4>{{ post.title}}</h4>
-            <p>{{ post.text|linebreaksbr }}</p>
+            <p>{{ post.text}}</p>
+	    <br>
         </div>
     {% endfor %}
 {% endblock %}
