--- a/djangohw/django/QAlist/templates/question.html
+++ b/djangohw/django/QAlist/templates/question.html
@@ -6,7 +6,7 @@
 {% block qadetail %}
     {% for post in posts %}
         <div class="post">
-            <p><a href=" ">{{ post.title }}</a></p>
+            <p>{{ post.title }}</p>
             <p>{{ post.text}}</p>
             <br>
         </div>
